@@ -311,3 +311,7 @@
 
 	* reverse.sh: www.dastelefonbuch.de und www.goyellow.de als neue
 	Rückwärtssuche-Provider
+
+2006-09-30:
+
+	callmonitor-1.6 veröffentlicht
